# jage_flutter

./: .gitignore  .metadata  README.md  flutter_native_splash-development.yaml  flutter_native_splash-production.yaml  pubspec.yaml
android/: build.gradle
android/app/: build.gradle
assets/csv/: weather.csv
assets/json/: 1.json  local.json  sanzijing.txt
assets/spine/: 126631.skel  spineboy-pro.json
flutter_package/: .metadata
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: FirstComponent.dart  HomePage.dart  config.dart  main.dart  theme.dart
lib/function/: JageFileManager.dart  JageNoSplashFactory.dart  JageNotification.dart  JsonParser.dart  SocialInfo.dart
lib/res/: ListData.dart  ListImages.dart
lib/tabs/: Tabs.dart
lib/widget/: BottomSheetWidget.dart  ChartsContentItem.dart  CommentListWidget.dart  ContentText.dart  DemoListWidget.dart  FileSelectIconWidget.dart  GalleryWidget.dart  IndexBottomBarWidget.dart  MediaWidget.dart  MessageItem.dart  MyPageViewWidget.dart  PopupMenu.dart  QuestionItemWidget.dart  SocialGridImage.dart  SocialWidget.dart  testWidget.dart
native_opencv/: pubspec.yaml
native_opencv/android/: CMakeLists.txt  build.gradle
native_opencv/android/src/main/cpp/: native-lib.cpp
native_opencv/android/src/main/java/com/example/native_opencv/: NativeOpencvPlugin.java
native_opencv/ios/: native_opencv.podspec
native_opencv/lib/: native_opencv.dart
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  (+1 more)
(+56 files in other folders)
